# aishell

./: .gitignore  Cargo.toml  README.md  claude.md
aios/: .gitignore
src/: lib.rs  main.rs
src/cli/: mod.rs  repl.rs
src/config/: mod.rs
src/llm/: mod.rs  openai.rs  provider.rs
src/mcp/: mod.rs
src/shell/: executor.rs  mod.rs  tools.rs
